tests/specs/ecosystem/bureaudouble/sonner/0_0_1.test
bureaudouble/sonner/0.0.1
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:react-dom@^18.2.0": "npm:react-dom@18.3.1_react@18.3.1",
      "npm:react-style-singleton@^2.2.1": "npm:react-style-singleton@2.2.1_react@18.3.1",
      "npm:react@^18.2.0": "npm:react@18.3.1"
    },
    "npm": {
      "get-nonce@1.0.1": {
        "integrity": "sha512-FJhYRoDaiatfEkUK8HKlicmu/3SGFD51q3itKDGoSTysQJBnfOcxU5GxnhE1E6soB76MbT0MBtnKJuXyAx+96Q==",
        "dependencies": {}
      },
      "invariant@2.2.4": {
        "integrity": "sha512-phJfQVBuaJM5raOpJjSfkiD6BpbCE4Ns//LaXl6wGYtUBY83nWS6Rf9tXm2e8VaK60JEjYldbPif/A2B1C2gNA==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0"
        }
      },
      "js-tokens@4.0.0": {
        "integrity": "sha512-RdJUflcE3cUzKiMqQgsCu06FPu9UdIJO0beYbPhHN4k6apgJtifcoCtT9bcxOpYBtpD2kCM6Sbzg4CausW/PKQ==",
        "dependencies": {}
      },
      "loose-envify@1.4.0": {
        "integrity": "sha512-lyuxPGr/Wfhrlem2CL/UcnUc1zcqKAImBDzukY7Y5F/yQiNdko6+fRLevlw1HgMySw7f611UIY408EtxRSoK3Q==",
        "dependencies": {
          "js-tokens": "js-tokens@4.0.0"
        }
      },
      "react-dom@18.3.1_react@18.3.1": {
        "integrity": "sha512-5m4nQKp+rZRb09LNH59GM4BxTh9251/ylbKIbpe7TpGxfJ+9kv6BLkLBXIjjspbgbnIBNqlI23tRnTWT0snUIw==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0",
          "react": "react@18.3.1",
          "scheduler": "scheduler@0.23.2"
        }
      },
      "react-style-singleton@2.2.1_react@18.3.1": {
        "integrity": "sha512-ZWj0fHEMyWkHzKYUr2Bs/4zU6XLmq9HsgBURm7g5pAVfyn49DgUiNgY2d4lXRlYSiCif9YBGpQleewkcqddc7g==",
        "dependencies": {
          "get-nonce": "get-nonce@1.0.1",
          "invariant": "invariant@2.2.4",
          "react": "react@18.3.1",
          "tslib": "tslib@2.6.2"
        }
      },
      "react@18.3.1": {
        "integrity": "sha512-wS+hAgJShR0KhEvPJArfuPVN1+Hz1t0Y6n5jLrGQbkb4urgPE/0Rve+1kMB1v/oWgHgm4WIcV+i7F2pTVj+2iQ==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0"
        }
      },
      "scheduler@0.23.2": {
        "integrity": "sha512-UOShsPwz7NrMUqhR6t0hWjFduvOzbtv7toDH1/hIrfRNIDBnnBWd0CwJTGvTpngVlmwGCdP9/Zl/tVrDqcuYzQ==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0"
        }
      },
      "tslib@2.6.2": {
        "integrity": "sha512-AEYxH93jGFPn/a2iVAwW87VuUIkR1FVUKB77NwMF7nBTDkDrrT/Hpt/IrCJ0QXhW27jTBDcf5ZY7w6RiqTMw2Q==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2503 [ERROR]: Cannot find namespace 'JSX'.
export const getAsset = (type: ToastTypes): JSX.Element | null =>({} as never);
                                            ~~~
    at file://<tmpdir>/src/assets.tsx:3:45

TS2304 [ERROR]: Cannot find name 'HTMLButtonElement'.
  onClick: (event: React.MouseEvent<HTMLButtonElement, MouseEvent>) => void;
                                    ~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/types.ts:38:37

TS2552 [ERROR]: Cannot find name 'MouseEvent'. Did you mean 'CloseEvent'?
  onClick: (event: React.MouseEvent<HTMLButtonElement, MouseEvent>) => void;
                                                       ~~~~~~~~~~
    at file://<tmpdir>/src/types.ts:38:56

    'CloseEvent' is declared here.
    declare var CloseEvent: {
                ~~~~~~~~~~
        at asset:///lib.deno.websocket.d.ts:32:13

Found 3 errors.

